--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             style="border-radius: 50%"
           />
           <img
-            src="./assets/img/jpg/Professional-Picture-Me.jpg"
-            alt="Professional Me"
+            src="./assets/img/jpg/22489.jpg"
+            alt="Me"
             width="20%"
             style="border-radius: 50%"
           />
