--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           />
           &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
-          <p style="text-align: justify"><b>An UI software that can predict movies using ML Clustering Algorithm based on user choice.
+          <p style="text-align: justify"><b>i developed an UI software that can predict movies using ML Clustering Algorithm based on user choice.
             It is implemented using html,css,javascript,bootstrap etc.</b>
             
           </p>
@@ -259,8 +259,8 @@
         &nbsp;
           </div>
           <p style="text-align: justify">
-           <b> I crated UI software which displays detail analysis along with visualization  related to cricket.
-             Also MySql query was used using Xampp during analysis.It is been implemented using html,css,bootstrap and xampp.</b>
+           <b> I created an UI software which displays detail analysis along with visualization  related to cricket.
+             Also MySql query was used using Xampp during analysis.It is been implemented using html,css,bootstrap and xampp as database.</b>
           </p>
           <a class="project-link" target="_blank" href="https://github.com/Cricket-Analysis/Cricket_Analysis">
             Check it out!
@@ -313,8 +313,8 @@
         &nbsp;
           </div>
           <p style="text-align: justify"> 
-            <b>I basically developed a disaster management portal whose main function is to reduce the damages and to safeguard 
-            common people including physically challenged people during the natural calamities.It is implemented using html, css, javascript,-mysql etc.</b> </p> 
+            <b>I basically developed a disaster management portal whose main function is to reduce the damage and to save
+            common people including physically challenged people during the natural calamities.The project is implemented using html, css, javascript, mysql as database.</b> </p> 
           <a class="project-link" target="_blank" href="https://github.com/HackSummit2-0/CareALot">
             Check it out!
           </a>
