--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/postman.svg" />
           </div>
           <p style="text-align: justify">
-            <b>I developed a backend software named CoffeeShopApplication using Java springboot,Postman and MySql,hosted on Github Pages,
+            <b>I developed a backend software named CoffeeShopApplication using Java springboot, Postman and MySql, hosted on Github Pages,
             which is an open source backend Application based on REST APIs to track customer activity and total bill amount in a Coffee Shop.
             It is a purely backend software where data is passed through postman and gets stored in MySQL.</b>
           </p>
@@ -208,8 +208,8 @@
           />
           &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
-          <p style="text-align: justify"><b>i developed an UI software that can predict movies using ML Clustering Algorithm based on user choice.
-            It is implemented using html,css,javascript,bootstrap etc.</b>
+          <p style="text-align: justify"><b>I developed an UI software that can predict movies using ML Clustering Algorithm based on user choice.
+            It is implemented using html, css, javascript & bootstrap.</b>
             
           </p>
           <a class="project-link" target="_blank" href="https://github.com/SRM-3rd-Year-Project/Movie-recommendation-system-"
