--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             style="border-radius: 50%"
           />
           <img
-            src="./assets/img/jpg/Professional-Picture-Me.jpg"
+            src="./assets/img/jpg/22489.jpg"
             alt="Professional Me"
             width="20%"
             style="border-radius: 50%"
