--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           />
         </picture>
         <p>
-         <b> I am a 3rd year Computer Science & Business System student from SRM Institute Of Science & Technology,
+         <b> I am a 4th year Computer Science & Business System student from SRM Institute Of Science & Technology,
           pursuing an undergraduate degree.I am interested in exploring the fields of Web development,
           Data Science, and Machine Learning, and I am open to opportunities for the same.</b>
         </p>
